tests/fail/13_break_outside_loop.lang
функция Начало() : целое {
    если (истина) {
        прервать;
    }
    вернуть 0;
}
